--- a/rulebooks/terraform_actions.yml
+++ b/rulebooks/terraform_actions.yml
@@ -12,8 +12,8 @@
     - name: Terraform Post Create Action
       condition: event.payload.template_type == "workflow_job"
       action:
-        run_job_template:
-          name: "{{ event.payload.workflwo_job_name }}"
+        run_workflow_template::
+          name: "{{ event.payload.workflow_job_template_name }}"
           organization: "{{ event.payload.organization_name }}"
           job_args:
             extra_vars:
